tests/fixtures/svs-v3/invalid/missing-signature.hex
24330631071108036e646e0807737065633131343601031400151ac918ca16070908046e6f6465080161d209d4046553f100d60101
